more colab friendly changes

--- a/main.ipynb
+++ b/main.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from monai.data import Dataset, CacheDataset,PersistentDataset\n",
+    "from monai.data import Dataset, CacheDataset,PersistentDataset, decollate_batch\n",
     "from glob import glob\n",
     "from os import path, listdir\n",
     "import pytorch_lightning as pl\n",
@@ -67,6 +67,7 @@
     "from monai.networks.nets import UNet,UNETR, SegResNet\n",
     "from monai.losses import TverskyLoss, DiceLoss\n",
     "from monai.metrics import DiceMetric\n",
+    "from monai.inferers import sliding_window_inference\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -76,20 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install monai==0.9.0"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = r\"Datasets\\2020\\MICCAI_BraTS2020_TrainingData\"\n",
+    "base_path = r\"/content/drive/MyDrive/BraTS_2020/Training\"\n",
     "# Base Path to the training Dataset"
    ]
   },
@@ -150,7 +142,7 @@
     "        ],\n",
     "        \"seg\": path.join(case, f\"{path.split(case)[-1]}_seg.nii.gz\"),\n",
     "    }\n",
-    "    for case in cases[:100]  #! Only 100 cases taken as test slice\n",
+    "    for case in cases[:30]  #! Only 30 cases taken as test slice\n",
     "]\n",
     "# Extract the path to the training nifti files of each case. Chosen are t1ce, t2 and flair. Segmentation is also extracted.\n",
     "\n",
@@ -196,7 +188,6 @@
     "        ConvertLabelsIntoOneHotd(\n",
     "            keys=[\"seg\"]\n",
     "        ),  # Converts the segmentation into one hot encoding\n",
-    "        RandSpatialCropd(keys=[\"image\", \"seg\"], roi_size=[224, 224, 144], random_size=False),\n",
     "        NormalizeIntensityd(\n",
     "            keys=\"image\", nonzero=True, channel_wise=True\n",
     "        ),  # Normalise Intensity of the images\n",
@@ -234,24 +225,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining a Basic UNet to Learn and test with limited Dataset\n",
+    "# Defining a Basic to Learn and test with limited Dataset\n",
     "class Model(pl.LightningModule):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.model = UNet(\n",
-    "            spatial_dims=3,\n",
+    "        # self.model = UNet(\n",
+    "        #     spatial_dims=3,\n",
+    "        #     in_channels=3,\n",
+    "        #     out_channels=3,\n",
+    "        #     channels=(16, 32, 64, 128, 256),\n",
+    "        #     strides=(2, 2, 2, 2),\n",
+    "        # )\n",
+    "\n",
+    "        self.model = SegResNet(\n",
+    "            blocks_down=[1, 2, 2, 3],\n",
+    "            blocks_up=[1, 1, 1],\n",
+    "            init_filters=16,\n",
     "            in_channels=3,\n",
     "            out_channels=3,\n",
-    "            channels=(16, 32, 64, 128, 256),\n",
-    "            strides=(2, 2, 2, 2),\n",
+    "            dropout_prob=0.2,\n",
     "        )\n",
     "\n",
-    "        self.batch_size = 70  #! Adjust with tuning Later\n",
-    "        self.num_workers = 4  #! Change for Machine / Temporarily omitted\n",
+    "        self.batch_size = 5  #! Adjust with tuning Later\n",
+    "        self.num_workers = 2  #! Change for Machine / Temporarily omitted\n",
     "        self.learning_rate = 1e-3  #! Adjust with tuning Later\n",
     "\n",
-    "        self.loss_function = DiceLoss(to_onehot_y=False, softmax=True)\n",
-    "        self.dice_metric = DiceMetric(include_background=False, reduction=\"mean\")\n",
+    "        self.loss_function = DiceLoss(\n",
+    "            to_onehot_y=False, sigmoid=True, squared_pred=True\n",
+    "        )\n",
+    "        self.dice_metric = DiceMetric(include_background=True, reduction=\"mean\")\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.model(x)\n",
@@ -273,13 +275,13 @@
     "            batch_size=self.batch_size,\n",
     "        )\n",
     "\n",
-    "    # def val_dataloader(self):\n",
-    "    #     return torch.utils.data.DataLoader(\n",
-    "    #         self.val_ds,\n",
-    "    #         shuffle=True,\n",
-    "    #         batch_size=self.batch_size,\n",
-    "    #         num_workers=self.num_workers,\n",
-    "    #     )\n",
+    "    def val_dataloader(self):\n",
+    "        return torch.utils.data.DataLoader(\n",
+    "            self.val_ds,\n",
+    "            shuffle=True,\n",
+    "            batch_size=self.batch_size,\n",
+    "            num_workers=self.num_workers,\n",
+    "        )\n",
     "\n",
     "    def configure_optimizers(self):\n",
     "        return torch.optim.Adam(self.model.parameters(), lr=self.learning_rate)\n",
@@ -288,7 +290,19 @@
     "        image, seg = batch[\"image\"], batch[\"seg\"]\n",
     "        output = self.forward(image)\n",
     "        loss = self.loss_function(output, seg)\n",
-    "        return {\"loss\": loss}\n"
+    "        tensorboard_logs = {\"train_loss\": loss.item()}\n",
+    "        return {\"loss\": loss, \"log\": tensorboard_logs}\n",
+    "\n",
+    "    def validation_step(self, batch, batch_idx):\n",
+    "        image, seg = batch[\"image\"], batch[\"seg\"]\n",
+    "        output = sliding_window_inference(\n",
+    "            inputs=image,\n",
+    "            roi_size=(240, 240, 160),\n",
+    "            sw_batch_size=1,\n",
+    "            predictor=self.forward,\n",
+    "            overlap=0.5,\n",
+    "        )\n",
+    "        loss = self.loss_function(output, seg)\n"
    ]
   },
   {
@@ -298,7 +312,7 @@
    "outputs": [],
    "source": [
     "# Declaring Logger\n",
-    "log_dir = r'./logs'\n",
+    "log_dir = r'/content/drive/MyDrive/BraTS_2020/logs'\n",
     "tb_logger = pl.loggers.TensorBoardLogger(\n",
     "    save_dir=log_dir\n",
     ")\n"
@@ -328,10 +342,9 @@
     "trainer = pl.Trainer(\n",
     "    accelerator=\"gpu\",\n",
     "    gpus=1,\n",
-    "    max_epochs=100,\n",
+    "    max_epochs=50,\n",
     "    auto_lr_find=True,\n",
     "    auto_scale_batch_size=True,\n",
-    "    move_metrics_to_cpu=True,\n",
     "    logger=tb_logger,\n",
     "    progress_bar_refresh_rate=20\n",
     ")\n"
@@ -417,7 +430,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.cuda.empty_cache()\n",
+    "# in case your GPU crashes and memory needs to be flushed"
+   ]
   }
  ],
  "metadata": {
