changed to SegResNet for Testing

--- a/main.ipynb
+++ b/main.ipynb
@@ -39,11 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from monai.data import Dataset, CacheDataset,PersistentDataset, decollate_batch\n",
+    "from monai.data import Dataset, CacheDataset,PersistentDataset, decollate_batch, list_data_collate\n",
     "from glob import glob\n",
     "from os import path, listdir\n",
     "import pytorch_lightning as pl\n",
@@ -61,6 +61,10 @@
     "    RandFlipd,\n",
     "    MapTransform,\n",
     "    CropForegroundd,\n",
+    "    EnsureTyped,\n",
+    "    EnsureType,\n",
+    "    Activations,\n",
+    "    AsDiscrete\n",
     ")\n",
     "\n",
     "from monai.data import partition_dataset\n",
@@ -77,11 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_path = r\"/content/drive/MyDrive/BraTS_2020/Training\"\n",
+    "base_path = r\"D:\\University\\OneDrive - UCSI University\\FYP 2022\\Code\\3D-Segmentation-of-Glioblastoma-from-MRI\\Datasets\\2020\\MICCAI_BraTS2020_TrainingData\"\n",
     "# Base Path to the training Dataset"
    ]
   },
@@ -106,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +151,9 @@
     "]\n",
     "# Extract the path to the training nifti files of each case. Chosen are t1ce, t2 and flair. Segmentation is also extracted.\n",
     "\n",
-    "training_data, validation_data = partition_dataset(mri_images, ratios=[0.7,0.3],shuffle=True)\n",
+    "training_data, validation_data = partition_dataset(\n",
+    "    mri_images, ratios=[0.7, 0.3], shuffle=True\n",
+    ")\n",
     "# 70 - 30 split of the training data.\n",
     "\n",
     "\n",
@@ -160,7 +167,9 @@
     "        ConvertLabelsIntoOneHotd(\n",
     "            keys=[\"seg\"]\n",
     "        ),  # Converts the segmentation into one hot encoding\n",
-    "        RandSpatialCropd(keys=[\"image\", \"seg\"], roi_size=[224, 224, 144], random_size=False),\n",
+    "        RandSpatialCropd(\n",
+    "            keys=[\"image\", \"seg\"], roi_size=[224, 224, 144], random_size=False\n",
+    "        ),\n",
     "        NormalizeIntensityd(\n",
     "            keys=\"image\", nonzero=True, channel_wise=True\n",
     "        ),  # Normalise Intensity of the images\n",
@@ -175,6 +184,7 @@
     "        RandFlipd(\n",
     "            keys=[\"image\", \"seg\"], prob=0.5, spatial_axis=2\n",
     "        ),  # Three Random flips along the three axes\n",
+    "        EnsureTyped(keys=[\"image\", \"seg\"]),\n",
     "    ]\n",
     ")\n",
     "# Defines the transformations to be applied to the training data.\n",
@@ -197,6 +207,7 @@
     "            pixdim=(1.0, 1.0, 1.0),\n",
     "            mode=(\"bilinear\", \"nearest\"),\n",
     "        ),  # Ensure spacing of voxels are uniform among scans\n",
+    "        EnsureTyped(keys=[\"image\", \"seg\"]),\n",
     "    ]\n",
     ")\n",
     "# Defines the transformations to be applied to the testing data.\n",
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +249,7 @@
     "        # )\n",
     "\n",
     "        self.model = SegResNet(\n",
-    "            blocks_down=[1, 2, 2, 3],\n",
+    "            blocks_down=[1, 2, 2, 4],\n",
     "            blocks_up=[1, 1, 1],\n",
     "            init_filters=16,\n",
     "            in_channels=3,\n",
@@ -246,9 +257,21 @@
     "            dropout_prob=0.2,\n",
     "        )\n",
     "\n",
+    "        self.post_pred_image = Compose(\n",
+    "            [\n",
+    "                EnsureType(),\n",
+    "                Activations(softmax=True),\n",
+    "                AsDiscrete(argmax=True, to_onehot=3),\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        self.post_pred_seg = Compose(\n",
+    "            [EnsureType(), Activations(softmax=True), AsDiscrete(to_onehot=3)]\n",
+    "        )\n",
+    "\n",
     "        self.batch_size = 5  #! Adjust with tuning Later\n",
     "        self.num_workers = 2  #! Change for Machine / Temporarily omitted\n",
-    "        self.learning_rate = 1e-3  #! Adjust with tuning Later\n",
+    "        self.learning_rate = 1e-4  #! Adjust with tuning Later\n",
     "\n",
     "        self.loss_function = DiceLoss(\n",
     "            to_onehot_y=False, sigmoid=True, squared_pred=True\n",
@@ -273,6 +296,7 @@
     "            self.train_ds,\n",
     "            shuffle=True,\n",
     "            batch_size=self.batch_size,\n",
+    "            collate_fn=list_data_collate,\n",
     "        )\n",
     "\n",
     "    def val_dataloader(self):\n",
@@ -302,7 +326,35 @@
     "            predictor=self.forward,\n",
     "            overlap=0.5,\n",
     "        )\n",
-    "        loss = self.loss_function(output, seg)\n"
+    "        loss = self.loss_function(output, seg)\n",
+    "        output = [self.post_pred_image(i) for i in decollate_batch(output)]\n",
+    "        self.dice_metric(y_pred=output, y=seg)\n",
+    "        return {\"val_loss\": loss, \"val_number\": len(output)}\n",
+    "    \n",
+    "    def validation_epoch_end(self, outputs):\n",
+    "        val_loss, num_items = 0, 0\n",
+    "        for output in outputs:\n",
+    "            val_loss += output[\"val_loss\"].sum().item()\n",
+    "            num_items += output[\"val_number\"]\n",
+    "        \n",
+    "        mean_val_dice = self.dice_metric.aggregate().item()\n",
+    "        self.dice_metric.reset()\n",
+    "        mean_val_loss = torch.tensor(val_loss / num_items)\n",
+    "        \n",
+    "        tensorboard_logs = {\n",
+    "            'val_dice': mean_val_dice,\n",
+    "            'val_loss': mean_val_loss\n",
+    "        }\n",
+    "        if mean_val_dice > self.best_val_dice:\n",
+    "            self.best_val_dice = mean_val_dice\n",
+    "            self.best_val_epoch = self.current_epoch\n",
+    "        print(\n",
+    "            f\"current epoch: {self.current_epoch} \"\n",
+    "            f\"current mean dice: {mean_val_dice:.4f}\"\n",
+    "            f\"\\nbest mean dice: {self.best_val_dice:.4f} \"\n",
+    "            f\"at epoch: {self.best_val_epoch}\"\n",
+    "        )\n",
+    "        return {\"log\": tensorboard_logs}\n"
    ]
   },
   {
@@ -312,7 +364,7 @@
    "outputs": [],
    "source": [
     "# Declaring Logger\n",
-    "log_dir = r'/content/drive/MyDrive/BraTS_2020/logs'\n",
+    "log_dir = r'./logs'\n",
     "tb_logger = pl.loggers.TensorBoardLogger(\n",
     "    save_dir=log_dir\n",
     ")\n"
