mount gdrive code added

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,6 +31,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# code for Google Colab Users\n",
     "%pip install monai==0.9.0\n",
     "%pip install monai[einops]\n",
