--- a/main.ipynb
+++ b/main.ipynb
@@ -266,6 +266,9 @@
     "            out_channels=3,\n",
     "            dropout_prob=0.2,\n",
     "        )\n",
+    "        \n",
+    "        self.best_val_dice = 0\n",
+    "        self.best_val_epoch = 0\n",
     "\n",
     "        self.post_pred_image = Compose(\n",
     "            [\n",
