reading niftii format

--- a/Glioblastoma Segmentation.ipynb
+++ b/Glioblastoma Segmentation.ipynb
@@ -28,10 +28,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Previewing the MRI Data\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from os import path, listdir\n",
+    "from monai.data import Dataset\n",
+    "from monai.transforms import (\n",
+    "    LoadImaged,\n",
+    "    Compose\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare list of All training Cases\n",
+    "TRAINING_DATASET_PATH = \"./MICCAI_BraTS2020_TrainingData/\"\n",
+    "cases = [path.join(TRAINING_DATASET_PATH, x) for x in listdir(TRAINING_DATASET_PATH)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare a list of dictionaries of T1CE, T2, FLAIR and Ground Truth Segmentation for preparing the Dataset to be used in the Data Loader \n",
+    "mri_cases_dictionary = [\n",
+    "    {\n",
+    "        \"image\": [\n",
+    "            path.join(case, f\"{path.split(case)[-1]}_t1ce.nii.gz\"),\n",
+    "            path.join(case, f\"{path.split(case)[-1]}_t2.nii.gz\"),\n",
+    "            path.join(case, f\"{path.split(case)[-1]}_flair.nii.gz\"),\n",
+    "        ],\n",
+    "        \"seg\": path.join(case, f\"{path.split(case)[-1]}_seg.nii.gz\"),\n",
+    "    }\n",
+    "    for case in cases[:30]  #! Only 30 cases taken as test slice\n",
+    "]\n",
+    "\n",
+    "# Transform data such as from niftii into Tensors\n",
+    "transform_training_dataset = Compose(\n",
+    "    [\n",
+    "        LoadImaged(keys=[\"image\",\"seg\"])\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "dataset_training = Dataset(mri_cases_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./MICCAI_BraTS2020_TrainingData/BraTS20_Training_001\\\\BraTS20_Training_001_t1ce.nii.gz',\n",
+       " './MICCAI_BraTS2020_TrainingData/BraTS20_Training_001\\\\BraTS20_Training_001_t2.nii.gz',\n",
+       " './MICCAI_BraTS2020_TrainingData/BraTS20_Training_001\\\\BraTS20_Training_001_flair.nii.gz']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_training[0]['image']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from monai.data import Dataset, CacheDataset,PersistentDataset, decollate_batch, list_data_collate\n",
+    "from glob import glob\n",
+    "from os import path, listdir\n",
+    "import pytorch_lightning as pl\n",
+    "from sklearn.model_selection import ShuffleSplit\n",
+    "\n",
+    "from monai.transforms import (\n",
+    "    LoadImaged,\n",
+    "    SpatialPadd,\n",
+    "    EnsureChannelFirstd,\n",
+    "    Compose,\n",
+    "    NormalizeIntensityd,\n",
+    "    Orientationd,\n",
+    "    Spacingd,\n",
+    "    RandSpatialCropd,\n",
+    "    RandFlipd,\n",
+    "    MapTransform,\n",
+    "    CropForegroundd,\n",
+    "    EnsureTyped,\n",
+    "    EnsureType,\n",
+    "    Activations,\n",
+    "    AsDiscrete,\n",
+    "    RandCropByPosNegLabeld,\n",
+    "    RandCropByLabelClassesd,\n",
+    "    RandSpatialCropSamplesd\n",
+    ")\n",
+    "\n",
+    "from monai.data import partition_dataset\n",
+    "from monai.networks.nets import UNet,UNETR, SegResNet, BasicUnet\n",
+    "from monai.losses import TverskyLoss, DiceLoss\n",
+    "from monai.metrics import DiceMetric\n",
+    "from monai.inferers import sliding_window_inference\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import utilities.split_data as split_data\n",
+    "plt.style.use(['science','ieee'])\n",
+    "%matplotlib inline"
+   ]
   }
  ],
  "metadata": {
