--- a/Glioblastoma Segmentation.ipynb
+++ b/Glioblastoma Segmentation.ipynb
@@ -111,16 +111,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visualising_mri_segment = dataset_training[0][\"seg\"].shape\n",
-    "visualising_mri_segment"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -183,42 +173,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "applying transform <monai.transforms.compose.Compose object at 0x00000272A8ADCAF0>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\transforms\\transform.py:102\u001b[0m, in \u001b[0;36mapply_transform\u001b[1;34m(transform, data, map_items, unpack_items, log_stats)\u001b[0m\n\u001b[0;32m    101\u001b[0m         \u001b[39mreturn\u001b[39;00m [_apply_transform(transform, item, unpack_items) \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m data]\n\u001b[1;32m--> 102\u001b[0m     \u001b[39mreturn\u001b[39;00m _apply_transform(transform, data, unpack_items)\n\u001b[0;32m    103\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    104\u001b[0m     \u001b[39m# if in debug mode, don't swallow exception so that the breakpoint\u001b[39;00m\n\u001b[0;32m    105\u001b[0m     \u001b[39m# appears where the exception was raised.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\transforms\\transform.py:66\u001b[0m, in \u001b[0;36m_apply_transform\u001b[1;34m(transform, parameters, unpack_parameters)\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[39mreturn\u001b[39;00m transform(\u001b[39m*\u001b[39mparameters)\n\u001b[1;32m---> 66\u001b[0m \u001b[39mreturn\u001b[39;00m transform(parameters)\n",
-      "Cell \u001b[1;32mIn[54], line 9\u001b[0m, in \u001b[0;36mConvertLabelsIntoOneHotd.__call__\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkeys:\n\u001b[0;32m      6\u001b[0m     one_hot_encode_array \u001b[39m=\u001b[39m [\n\u001b[0;32m      7\u001b[0m         data_dict[key] \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m,  \u001b[39m# Non Enhancing Tumor Core\u001b[39;00m\n\u001b[0;32m      8\u001b[0m         data_dict[key] \u001b[39m==\u001b[39m \u001b[39m2\u001b[39m,  \u001b[39m# Edema Core\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m         \u001b[39mTrue\u001b[39;00m \u001b[39mif\u001b[39;00m data_dict[key] \u001b[39m==\u001b[39;49m \u001b[39m4\u001b[39;49m \u001b[39melse\u001b[39;00m \u001b[39mFalse\u001b[39;00m,  \u001b[39m# Enhancing Tumor Core\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     ]\n\u001b[0;32m     11\u001b[0m     data_dict[key] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mstack(one_hot_encode_array, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mastype(np\u001b[39m.\u001b[39mfloat32)\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\data\\meta_tensor.py:268\u001b[0m, in \u001b[0;36mMetaTensor.__torch_function__\u001b[1;34m(cls, func, types, args, kwargs)\u001b[0m\n\u001b[0;32m    267\u001b[0m     kwargs \u001b[39m=\u001b[39m {}\n\u001b[1;32m--> 268\u001b[0m ret \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m__torch_function__(func, types, args, kwargs)\n\u001b[0;32m    269\u001b[0m \u001b[39m# if `out` has been used as argument, metadata is not copied, nothing to do.\u001b[39;00m\n\u001b[0;32m    270\u001b[0m \u001b[39m# if \"out\" in kwargs:\u001b[39;00m\n\u001b[0;32m    271\u001b[0m \u001b[39m#     return ret\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\torch\\_tensor.py:1279\u001b[0m, in \u001b[0;36mTensor.__torch_function__\u001b[1;34m(cls, func, types, args, kwargs)\u001b[0m\n\u001b[0;32m   1278\u001b[0m \u001b[39mwith\u001b[39;00m _C\u001b[39m.\u001b[39mDisableTorchFunction():\n\u001b[1;32m-> 1279\u001b[0m     ret \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1280\u001b[0m     \u001b[39mif\u001b[39;00m func \u001b[39min\u001b[39;00m get_default_nowrap_functions():\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Boolean value of Tensor with more than one value is ambiguous",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\transforms\\transform.py:102\u001b[0m, in \u001b[0;36mapply_transform\u001b[1;34m(transform, data, map_items, unpack_items, log_stats)\u001b[0m\n\u001b[0;32m    101\u001b[0m         \u001b[39mreturn\u001b[39;00m [_apply_transform(transform, item, unpack_items) \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m data]\n\u001b[1;32m--> 102\u001b[0m     \u001b[39mreturn\u001b[39;00m _apply_transform(transform, data, unpack_items)\n\u001b[0;32m    103\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    104\u001b[0m     \u001b[39m# if in debug mode, don't swallow exception so that the breakpoint\u001b[39;00m\n\u001b[0;32m    105\u001b[0m     \u001b[39m# appears where the exception was raised.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\transforms\\transform.py:66\u001b[0m, in \u001b[0;36m_apply_transform\u001b[1;34m(transform, parameters, unpack_parameters)\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[39mreturn\u001b[39;00m transform(\u001b[39m*\u001b[39mparameters)\n\u001b[1;32m---> 66\u001b[0m \u001b[39mreturn\u001b[39;00m transform(parameters)\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\transforms\\compose.py:174\u001b[0m, in \u001b[0;36mCompose.__call__\u001b[1;34m(self, input_)\u001b[0m\n\u001b[0;32m    173\u001b[0m \u001b[39mfor\u001b[39;00m _transform \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransforms:\n\u001b[1;32m--> 174\u001b[0m     input_ \u001b[39m=\u001b[39m apply_transform(_transform, input_, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmap_items, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49munpack_items, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlog_stats)\n\u001b[0;32m    175\u001b[0m \u001b[39mreturn\u001b[39;00m input_\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\transforms\\transform.py:129\u001b[0m, in \u001b[0;36mapply_transform\u001b[1;34m(transform, data, map_items, unpack_items, log_stats)\u001b[0m\n\u001b[0;32m    128\u001b[0m         _log_stats(data\u001b[39m=\u001b[39mdata)\n\u001b[1;32m--> 129\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mapplying transform \u001b[39m\u001b[39m{\u001b[39;00mtransform\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: applying transform <__main__.ConvertLabelsIntoOneHotd object at 0x00000272AA1F29D0>",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[60], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dataset_training[\u001b[39m10\u001b[39;49m][\u001b[39m\"\u001b[39m\u001b[39mseg\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\data\\dataset.py:107\u001b[0m, in \u001b[0;36mDataset.__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m    104\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(index, collections\u001b[39m.\u001b[39mabc\u001b[39m.\u001b[39mSequence):\n\u001b[0;32m    105\u001b[0m     \u001b[39m# dataset[[1, 3, 4]]\u001b[39;00m\n\u001b[0;32m    106\u001b[0m     \u001b[39mreturn\u001b[39;00m Subset(dataset\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m, indices\u001b[39m=\u001b[39mindex)\n\u001b[1;32m--> 107\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_transform(index)\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\data\\dataset.py:93\u001b[0m, in \u001b[0;36mDataset._transform\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     90\u001b[0m \u001b[39mFetch single data item from `self.data`.\u001b[39;00m\n\u001b[0;32m     91\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     92\u001b[0m data_i \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata[index]\n\u001b[1;32m---> 93\u001b[0m \u001b[39mreturn\u001b[39;00m apply_transform(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtransform, data_i) \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransform \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m data_i\n",
-      "File \u001b[1;32mc:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\transforms\\transform.py:129\u001b[0m, in \u001b[0;36mapply_transform\u001b[1;34m(transform, data, map_items, unpack_items, log_stats)\u001b[0m\n\u001b[0;32m    127\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    128\u001b[0m         _log_stats(data\u001b[39m=\u001b[39mdata)\n\u001b[1;32m--> 129\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mapplying transform \u001b[39m\u001b[39m{\u001b[39;00mtransform\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: applying transform <monai.transforms.compose.Compose object at 0x00000272A8ADCAF0>"
-     ]
-    }
-   ],
    "source": [
-    "dataset_training[10][\"seg\"][0][0]"
+    "# TODO\n",
+    "- Data Preprocessing\n",
+    "- Choosing Data Loader -> Slice\n",
+    "- Choosing Encoder\n",
+    "- Choosing Decoder -> Append Encoder\n",
+    "\n",
+    "add more as you go"
    ]
   },
   {
@@ -266,33 +231,6 @@
     "plt.style.use(['science','ieee'])\n",
     "%matplotlib inline"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "True if 3 == 4 else False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
